# ChangeLog for dev-db/phppgadmin
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.70 2007/09/25 20:45:24 dev-zero Exp $

*phppgadmin-4.1.3 (25 Sep 2007)

  25 Sep 2007; Tiziano Müller <dev-zero@gentoo.org>
  -phppgadmin-4.0.1.ebuild, -phppgadmin-4.1.ebuild,
  -phppgadmin-4.1.1.ebuild, +phppgadmin-4.1.3.ebuild:
  Version bump (bug #192398), dropped old versions.

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  phppgadmin-4.1.2.ebuild:
  stable x86, security bug 180133

  04 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  phppgadmin-4.1.2.ebuild:
  Stable on sparc wrt security #180133

  02 Jun 2007; nixnut <nixnut@gentoo.org> phppgadmin-4.1.2.ebuild:
  Stable on ppc wrt bug 180133

  02 Jun 2007; Jeroen Roovers <jer@gentoo.org> phppgadmin-4.1.2.ebuild:
  Stable for HPPA (bug #180133).

  02 Jun 2007; Christoph Mende <angelos@gentoo.org> phppgadmin-4.1.2.ebuild:
  Stable on amd64 wrt security bug 180133

*phppgadmin-4.1.2 (02 Jun 2007)

  02 Jun 2007; Renat Lumpau <rl03@gentoo.org> +phppgadmin-4.1.2.ebuild:
  Version bump, security bug #180133

*phppgadmin-4.1.1 (25 May 2007)

  25 May 2007; Tiziano Müller <dev-zero@gentoo.org>
  +phppgadmin-4.1.1.ebuild:
  Version bump

*phppgadmin-4.1 (28 Feb 2007)

  28 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> +phppgadmin-4.1.ebuild:
  Version bump (bug #168426)

  04 Feb 2007; Renat Lumpau <rl03@gentoo.org> -phppgadmin-3.5.4.ebuild:
  Removed old version

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> phppgadmin-4.0.1.ebuild:
  amd64 stable, bug 154224

  03 Feb 2007; nixnut <nixnut@gentoo.org> phppgadmin-4.0.1.ebuild:
  Stable on ppc wrt bug 154224

  01 Feb 2007; Jeroen Roovers <jer@gentoo.org> phppgadmin-4.0.1.ebuild:
  Stable for HPPA (bug #154224).

  11 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  phppgadmin-4.0.1.ebuild:
  stable x86, bug #154224
