@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/Attic/phppgadmin-4.1.3.ebuild,v 1.1 2007/09/25 20:45:24 dev-zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/Attic/phppgadmin-4.1.3.ebuild,v 1.2 2007/10/31 05:23:16 jer Exp $
 
 inherit webapp depend.php
 
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.bz2"
 HOMEPAGE="http://phppgadmin.sourceforge.net/"
 
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~hppa ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 hppa ~ppc ~sparc ~x86"
 
 need_php
 
@@ -32,12 +32,12 @@ src_install() {
 	dodoc ${docs}
 	mv conf/config.inc.php-dist conf/config.inc.php
 
-	cp -r * ${D}${MY_HTDOCSDIR}
+	cp -r * "${D}"${MY_HTDOCSDIR}
 	for doc in ${docs} INSTALL LICENSE; do
-		rm -f ${D}${MY_HTDOCSDIR}/${doc}
+		rm -f "${D}"${MY_HTDOCSDIR}/${doc}
 	done
 
 	webapp_configfile ${MY_HTDOCSDIR}/conf/config.inc.php
-	webapp_postinst_txt en ${FILESDIR}/postinstall-en.txt
+	webapp_postinst_txt en "${FILESDIR}"/postinstall-en.txt
 	webapp_src_install
 }
