@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/phppgadmin
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.70 2007/09/25 20:45:24 dev-zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/phppgadmin/ChangeLog,v 1.71 2007/10/31 05:23:16 jer Exp $
+
+  31 Oct 2007; Jeroen Roovers <jer@gentoo.org> phppgadmin-4.1.3.ebuild:
+  Stable for HPPA (bug #197575). Fixed quoting issues.
 
 *phppgadmin-4.1.3 (25 Sep 2007)
 
